# ECCB-2026-Tutorial

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  PARTICIPANT_SETUP.md  README.md  TUTORIAL_DRY_RUN.md  environment-dgat-cpu.yml  environment.yml  pyproject.toml  requirements.txt  tutorial_checklist.md
data/raw/: dgat_predictions.csv  dgat_predictions.metadata.json
notebooks/: 01_environment_and_spatial_exploration.ipynb  02_dgat_protein_inference_workflow.ipynb  03_evaluation_and_interpretation.ipynb
outputs/: eccb_2026_dgat_tutorial_slides.pptx
scripts/: check_dgat_environment.py  download_dgat_assets.sh  prepare_dgat_data.py  run_official_dgat_prediction.py  run_tutorial_demo.py  session01_spatial_exploration.py  session02_dgat_inference_workflow.py  session03_evaluation_interpretation.py
src/dgat_tutorial/: __init__.py  data.py  dgat.py  evaluation.py  plotting.py
tests/: test_dgat.py
