[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eccb-dgat-tutorial"
version = "0.1.0"
description = "Hands-on ECCB tutorial materials for DGAT spatial protein inference"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10",
    "gdown>=5",
    "ipykernel>=6",
    "jupyterlab>=4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "scanpy>=1.10",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "seaborn>=0.13",
    "squidpy>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
